| Summary: | ASTERISK-27625: channels: CHECK_BLOCKING is ineffective | ||||
| Reporter: | Corey Farrell (coreyfarrell) | Labels: | |||
| Date Opened: | 2018-01-25 15:44:41.000-0600 | Date Closed: | 2018-06-21 09:11:01 | ||
| Priority: | Minor | Regression? | |||
| Status: | Closed/Complete | Components: | Core/Channels | ||
| Versions: | 13.19.0 GIT 15.2.0 | Frequency of Occurrence | |||
| Related Issues: |
| ||||
| Environment: | Attachments: | ( 0) backtrace-channels-pjsip-dtmf_info_fallback.txt ( 1) backtrace-channels-pjsip-transfers-attended_transfer-nominal-caller_local_blonde.txt ( 2) backtrace-rest_api-danger-dangerous.txt | |||
| Description: | {{CHECK_BLOCKING}} is used to set blocking flag/pthread/function is unset, but does not return success or error. In all cases the caller of {{CHECK_BLOCKING}} ends up clearing the blocking flag (which it might not have even been set by the current thread). | ||||
| Comments: | By: Corey Farrell (coreyfarrell) 2018-01-31 11:07:53.410-0600 When an assert was added to the error path it caused testsuite failures. These are the backtraces collected. The rest_api and dtmf_info_fallback are from 13, caller_local_blonde is from 15. By: Corey Farrell (coreyfarrell) 2018-05-03 08:31:42.512-0500 Sent back to triage so Digium can either re-open and add internal tracking ticket or just close this. I don't have a solution. By: Friendly Automation (friendly-automation) 2018-06-21 09:11:04.708-0500 Change 9214 merged by Jenkins2: AMI PlayDTMF Action: Make not compete with channel's media thread. [https://gerrit.asterisk.org/9214|https://gerrit.asterisk.org/9214] By: Friendly Automation (friendly-automation) 2018-06-21 09:36:51.255-0500 Change 9215 merged by Jenkins2: ARI POST DTMF: Make not compete with channel's media thread. [https://gerrit.asterisk.org/9215|https://gerrit.asterisk.org/9215] By: Friendly Automation (friendly-automation) 2018-06-21 10:23:58.067-0500 Change 9209 merged by George Joseph: AMI PlayDTMF Action: Make not compete with channel's media thread. [https://gerrit.asterisk.org/9209|https://gerrit.asterisk.org/9209] By: Friendly Automation (friendly-automation) 2018-06-21 10:24:47.422-0500 Change 9216 merged by George Joseph: autoservice: Don't start channel autoservice if the thread is a user interface. [https://gerrit.asterisk.org/9216|https://gerrit.asterisk.org/9216] By: Friendly Automation (friendly-automation) 2018-06-21 10:24:48.093-0500 Change 9217 merged by George Joseph: channel.c: Fix usage of CHECK_BLOCKING() [https://gerrit.asterisk.org/9217|https://gerrit.asterisk.org/9217] By: Friendly Automation (friendly-automation) 2018-06-21 10:25:00.247-0500 Change 9218 merged by George Joseph: channel.c: Make CHECK_BLOCKING() save thread LWP id for messages. [https://gerrit.asterisk.org/9218|https://gerrit.asterisk.org/9218] By: Friendly Automation (friendly-automation) 2018-06-21 10:26:42.269-0500 Change 9219 merged by George Joseph: AMI PlayDTMF Action: Make not compete with channel's media thread. [https://gerrit.asterisk.org/9219|https://gerrit.asterisk.org/9219] By: Friendly Automation (friendly-automation) 2018-06-21 10:27:19.382-0500 Change 9210 merged by George Joseph: ARI POST DTMF: Make not compete with channel's media thread. [https://gerrit.asterisk.org/9210|https://gerrit.asterisk.org/9210] By: Friendly Automation (friendly-automation) 2018-06-21 10:27:34.284-0500 Change 9220 merged by George Joseph: ARI POST DTMF: Make not compete with channel's media thread. [https://gerrit.asterisk.org/9220|https://gerrit.asterisk.org/9220] By: Friendly Automation (friendly-automation) 2018-06-21 10:27:41.423-0500 Change 9222 merged by George Joseph: channel.c: Fix usage of CHECK_BLOCKING() [https://gerrit.asterisk.org/9222|https://gerrit.asterisk.org/9222] By: Friendly Automation (friendly-automation) 2018-06-21 10:27:41.891-0500 Change 9221 merged by George Joseph: autoservice: Don't start channel autoservice if the thread is a user interface. [https://gerrit.asterisk.org/9221|https://gerrit.asterisk.org/9221] By: Friendly Automation (friendly-automation) 2018-06-21 10:27:42.885-0500 Change 9223 merged by George Joseph: channel.c: Make CHECK_BLOCKING() save thread LWP id for messages. [https://gerrit.asterisk.org/9223|https://gerrit.asterisk.org/9223] By: Friendly Automation (friendly-automation) 2018-06-21 10:27:53.610-0500 Change 9212 merged by George Joseph: channel.c: Fix usage of CHECK_BLOCKING() [https://gerrit.asterisk.org/9212|https://gerrit.asterisk.org/9212] By: Friendly Automation (friendly-automation) 2018-06-21 10:27:54.521-0500 Change 9211 merged by George Joseph: autoservice: Don't start channel autoservice if the thread is a user interface. [https://gerrit.asterisk.org/9211|https://gerrit.asterisk.org/9211] By: Friendly Automation (friendly-automation) 2018-06-21 10:27:55.170-0500 Change 9213 merged by George Joseph: channel.c: Make CHECK_BLOCKING() save thread LWP id for messages. [https://gerrit.asterisk.org/9213|https://gerrit.asterisk.org/9213] | ||||